# freespace-robot

./: .gitignore  README.md  install.sh
calib/: c920.txt  c920.yaml  fisheye.txt
src/: .gitignore  deps.rosinstall
src/camera_utils/: CMakeLists.txt  package.xml
src/camera_utils/scripts/: draw_lidar_points.py  publish_camera_info.py
src/freespace_seg/: CMakeLists.txt  package.xml
src/freespace_seg/launch/: freespace_seg.launch
src/freespace_seg/scripts/: camera_model.py  image_publisher.py  inference.py  inference_deeplab.py  inference_node.py  nn
src/humanassist/: CMakeLists.txt  package.xml
src/humanassist/launch/: freespace_seg.launch
src/humanassist/scripts/: camera_thread.py  human_assist.py  inference.py  live_infer_tf.py  nn  obstacle_avoid.py  stop_on_obstacle.py
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/launch/: create2.launch
src/robot_control/scripts/: stop_on_obstacle.py  stop_on_obstacle_pcl.py  teleop.py
src/wc_bridge/: CMakeLists.txt  package.xml
src/wc_bridge/launch/: move_base.launch
src/wc_bridge/scripts/: bridge.py
util/: teleop.py  teleop_index.html  vid.py
wheelchair/rosserial_drivetrain/: consts.h  main.cpp
wheelchair/sharkbus_parser/: graph.py  parse.py
wheelchair/watchdog/: ..arduino.avr.uno.elf  ..arduino.avr.uno.hex  run.sh  watchdog.ino
